# cobblegen-web

./: .editorconfig  Dockerfile  README.md  pyproject.toml  requirements.txt
data/basaltGen/: template.json
data/characters/: 31e7f0f9-1ef8-4a13-92cb-1c19385c1f64.json  demo.json  template.json
data/cobbleGen/: template.json
data/stoneGen/: template.json
src/: app.py  schema_validation.py
src/templates/: base.html  dashboard.html  edit_form.html  home.html
static/css/: style.css
static/js/: hjson.js
webapp/: __init__.py  app.py  form_generator.py
webapp/templates/: 404.html.jinja  base.html  base.html.jinja  dashboard.html  dashboard.html.jinja  dashboard_partial.html  dashboard_partial.html.jinja  dashboard_partial_macro.html  edit_form.html  export_modal.html  export_modal.html.jinja  form.html  form.html.jinja  form_partial.html  form_partial.html.jinja  form_partial_macro.html  form_partial_macro.html.jinja  form_partial_partial.html  form_partial_partial.html.jinja  home.html  home.html.jinja
webapp/templates/components/: input.html  input.html.jinja
