[project]
name = "cobblegen-web"
version = "2025.0.0"  # YYYY.MINOR.MACRO
description = "Configurator for CobbleGen (MC) Mod"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "flask>=3.1.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
    "pillow>=11.1.0",
    "requests>=2.32.3",
]
